--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="left">
                             <a href="#">
-                                    <img src="img/logo-blizzard.svg" class="logo" alt="Logo da Blizzard">
+                                    <img class="logo" src="img/logo-blizzard.svg" alt="Logo da Blizzard">
                                     <span> 
                                         <button onclick="show_hideJ()">
                                             <a href="#"class="item1">
